--- a/TP WebApp/Services/Services.csproj
+++ b/TP WebApp/Services/Services.csproj
@@ -40,6 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrudCountry.cs" />
+    <Compile Include="CrudEmployee.cs" />
+    <Compile Include="Models\CountryModel.cs" />
+    <Compile Include="Models\EmployeeModel.cs" />
+    <Compile Include="Models\ShiftModel.cs" />
+    <Compile Include="Operations\ConvertShift.cs" />
+    <Compile Include="Operations\EmployeeID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
