--- a/TP WebApp/Data/Data.csproj
+++ b/TP WebApp/Data/Data.csproj
@@ -60,9 +60,18 @@
     <Compile Include="Migrations\201712091532273_InitialDB.Designer.cs">
       <DependentUpon>201712091532273_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712122118340_SecondChanges.cs" />
+    <Compile Include="Migrations\201712122118340_SecondChanges.Designer.cs">
+      <DependentUpon>201712122118340_SecondChanges.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712122121097_AddedShiftControl.cs" />
+    <Compile Include="Migrations\201712122121097_AddedShiftControl.Designer.cs">
+      <DependentUpon>201712122121097_AddedShiftControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataAccess\ShiftsData.cs" />
+    <Compile Include="DataAccess\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -71,6 +80,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201712091532273_InitialDB.resx">
       <DependentUpon>201712091532273_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712122118340_SecondChanges.resx">
+      <DependentUpon>201712122118340_SecondChanges.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712122121097_AddedShiftControl.resx">
+      <DependentUpon>201712122121097_AddedShiftControl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
