--- a/TP WebApp/Services/Services.csproj
+++ b/TP WebApp/Services/Services.csproj
@@ -40,10 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrudCountry.cs" />
-    <Compile Include="CrudEmployee.cs" />
+    <Compile Include="Crud\CrudCountry.cs" />
+    <Compile Include="Crud\CrudEmployee.cs" />
     <Compile Include="Models\CountryModel.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
+    <Compile Include="Models\ShiftControlModel.cs" />
     <Compile Include="Models\ShiftModel.cs" />
     <Compile Include="Operations\ConvertShift.cs" />
     <Compile Include="Operations\EmployeeID.cs" />
