--- a/TP WebApp/Services/Services.csproj
+++ b/TP WebApp/Services/Services.csproj
@@ -42,12 +42,15 @@
   <ItemGroup>
     <Compile Include="Crud\CrudCountry.cs" />
     <Compile Include="Crud\CrudEmployee.cs" />
+    <Compile Include="HourRegister.cs" />
     <Compile Include="Models\CountryModel.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
     <Compile Include="Models\ShiftControlModel.cs" />
     <Compile Include="Models\ShiftModel.cs" />
+    <Compile Include="Operations\ConvertEmployee.cs" />
     <Compile Include="Operations\ConvertShift.cs" />
     <Compile Include="Operations\EmployeeID.cs" />
+    <Compile Include="Operations\ShowShift.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
