--- a/TP WebApp/Presentacion/Web.config
+++ b/TP WebApp/Presentacion/Web.config
@@ -73,6 +73,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Context" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Data.Context;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Employees" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Data.Context;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
