--- a/TP WebApp/Services/Services.csproj
+++ b/TP WebApp/Services/Services.csproj
@@ -42,9 +42,10 @@
   <ItemGroup>
     <Compile Include="Crud\CrudCountry.cs" />
     <Compile Include="Crud\CrudEmployee.cs" />
-    <Compile Include="HourRegister.cs" />
+    <Compile Include="ImportantsOperations\HourRegister.cs" />
     <Compile Include="Models\CountryModel.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
+    <Compile Include="Models\HourSalaryModel.cs" />
     <Compile Include="Models\ShiftControlModel.cs" />
     <Compile Include="Models\ShiftModel.cs" />
     <Compile Include="Operations\ConvertEmployee.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Operations\EmployeeID.cs" />
     <Compile Include="Operations\ShowShift.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ImportantsOperations\SalarySummary.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj">
@@ -59,5 +61,6 @@
       <Name>Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
