Eliminacion de empleadoID y reacomodo de carpetas para mas clara visualizacion

--- a/TP WebApp/Services/Services.csproj
+++ b/TP WebApp/Services/Services.csproj
@@ -40,20 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Crud\CrudCountry.cs" />
-    <Compile Include="Crud\CrudEmployee.cs" />
-    <Compile Include="ImportantsOperations\HourRegister.cs" />
+    <Compile Include="FrontOperations\Crud\CrudCountry.cs" />
+    <Compile Include="FrontOperations\Crud\CrudEmployee.cs" />
+    <Compile Include="FrontOperations\HourRegister.cs" />
     <Compile Include="Models\CountryModel.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
     <Compile Include="Models\HourSalaryModel.cs" />
     <Compile Include="Models\ShiftControlModel.cs" />
     <Compile Include="Models\ShiftModel.cs" />
-    <Compile Include="Operations\ConvertEmployee.cs" />
-    <Compile Include="Operations\ConvertShift.cs" />
-    <Compile Include="Operations\EmployeeID.cs" />
-    <Compile Include="Operations\ShowShift.cs" />
+    <Compile Include="ConvertsOperations\ConvertEmployee.cs" />
+    <Compile Include="ConvertsOperations\ConvertShift.cs" />
+    <Compile Include="FrontOperations\ShowShift.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ImportantsOperations\SalarySummary.cs" />
+    <Compile Include="FrontOperations\SalarySummary.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj">
