--- a/TP WebApp/Presentacion/Presentacion.csproj
+++ b/TP WebApp/Presentacion/Presentacion.csproj
@@ -199,6 +199,7 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\Validations.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -226,7 +227,6 @@
     <Content Include="Views\Shift\ShiftControl.cshtml" />
     <Content Include="Views\Employee\Form.cshtml" />
     <Content Include="Views\Employee\ModifyEmployee.cshtml" />
-
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
