Arreglado tema del registro de hora que no llegaba del front al back, falta terminar que muestre las horas trabajadas que no las muestra

--- a/TP WebApp/Presentacion/Presentacion.csproj
+++ b/TP WebApp/Presentacion/Presentacion.csproj
@@ -228,6 +228,7 @@
     <Content Include="Views\Employee\Form.cshtml" />
     <Content Include="Views\Employee\ModifyEmployee.cshtml" />
     <Content Include="Views\Employee\DeleteEmployee.cshtml" />
+    <Content Include="Views\Shift\Register2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
